force-app/main/default/objects/Portfolio_Project__mdt/Portfolio_Project__mdt.object-meta.xml
<CustomObject>
    <label>Portfolio Project</label>
    <pluralLabel>Portfolio Projects</pluralLabel>
</CustomObject>