force-app/main/default/objects/Portfolio_Project__mdt/fields/Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Accent_Color__c</fullName>
    <label>Accent Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>