force-app/main/default/objects/Portfolio_Project__mdt/fields/Client_Industry__c.field-meta.xml
<CustomField>
    <fullName>Client_Industry__c</fullName>
    <label>Client Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>