force-app/main/default/objects/Portfolio_Project__mdt/fields/Logo_Initials__c.field-meta.xml
<CustomField>
    <fullName>Logo_Initials__c</fullName>
    <label>Logo Initials</label>
    <length>4</length>
    <type>Text</type>
</CustomField>