force-app/main/default/objects/Portfolio_Project__mdt/fields/Project_Year__c.field-meta.xml
<CustomField>
    <fullName>Project_Year__c</fullName>
    <label>Project Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>