force-app/main/default/objects/Portfolio_Project__mdt/fields/Technologies_Used__c.field-meta.xml
<CustomField>
    <fullName>Technologies_Used__c</fullName>
    <label>Technologies Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>